[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/NN_Connection_Display.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="NN_Connection_Display" type="Node2D"]
script = ExtResource( 1 )

[node name="Connection" type="Line2D" parent="."]
points = PoolVector2Array( 45.5946, 3.39935, 139.982, 173.297, 292.89, 10.9504, 134.319, 188.399, 145.645, 358.296, 623.246, 365.847, 355.185, 343.194, 345.747, 18.5013, 621.358, 16.6136, 353.298, 31.7156, 374.063, 184.623, 985.693, 188.399, 719.521, 163.858, 711.97, 24.1646, 985.693, 29.8279, 725.184, 35.4911, 730.847, 360.184, 981.918, 358.296, 1244.32, 362.072, 1219.77, 26.0524, 1064.98, 18.5013, 1387.78, 26.0524 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )
joint_mode = 2
begin_cap_mode = 1
end_cap_mode = 1
sharp_limit = 10.0
round_precision = 10
antialiased = true

[node name="Connection_Mouse_Hover" type="Area2D" parent="Connection"]
gravity = 0.0

[node name="Mouse_Hover_Shape" type="CollisionShape2D" parent="Connection/Connection_Mouse_Hover"]
shape = SubResource( 1 )

[connection signal="input_event" from="Connection/Connection_Mouse_Hover" to="." method="_on_Connection_Mouse_Hover_input_event"]
[connection signal="mouse_entered" from="Connection/Connection_Mouse_Hover" to="." method="_on_Connection_Mouse_Hover_mouse_entered"]
[connection signal="mouse_exited" from="Connection/Connection_Mouse_Hover" to="." method="_on_Connection_Mouse_Hover_mouse_exited"]
